[gd_scene load_steps=5 format=3 uid="uid://cpura6d73oesv"]

[ext_resource type="Script" path="res://Scripts/main_scene.gd" id="1_5tx36"]
[ext_resource type="PackedScene" uid="uid://dnc10ecx7q077" path="res://Scenes/Hub.tscn" id="1_5ypqa"]
[ext_resource type="PackedScene" uid="uid://28yg82c3wv0u" path="res://Scenes/tower_defence.tscn" id="2_31g80"]
[ext_resource type="PackedScene" uid="uid://c3v38w27hvs3j" path="res://Scenes/turn_based_strategy.tscn" id="4_hehef"]

[node name="Main" type="Node3D"]
script = ExtResource("1_5tx36")

[node name="Hub" parent="." instance=ExtResource("1_5ypqa")]
unique_name_in_owner = true
visible = false

[node name="TowerDefence" parent="." instance=ExtResource("2_31g80")]
unique_name_in_owner = true
process_mode = 4
visible = false

[node name="TurnBasedStrategy" parent="." instance=ExtResource("4_hehef")]
unique_name_in_owner = true
process_mode = 4
transform = Transform3D(1, 0, 1.77636e-15, 0, 1, 8.88178e-16, 0, 0, 1, 0, -9.53674e-07, 0)
visible = false

[node name="MainCamera" type="Camera3D" parent="."]
transform = Transform3D(2.98023e-08, -0.764303, 0.644858, 0, 0.644858, 0.764303, -1, -2.2778e-08, 1.92183e-08, 10.3594, 13.8548, 0.302783)

[connection signal="warpToThisZone" from="Hub" to="." method="_on_hub_warp_to_this_zone"]
